# dotnet7-services

./: .gitignore  Chinook Azure Service [Net 7].postman_collection.json  Chinook GraphQL Service [Net 7].postman_collection.json  Chinook OData Service [Net 7].postman_collection.json  Chinook Rest Service [Net 7].postman_collection.json  README.md  RockShop.sln  chinook.sql  docker-compose.yml
Chinook.Common/: StudentModel.cs  SuggestionModel.cs
RockShop.Azure.Service/: TopFiveBookFunction.cs
RockShop.Azure.Service.Isolated/: AppRadarFunction.cs  Program.cs  RockShop_Azure_Service_Isolated.csproj  TopSalesFunction.cs
RockShop.Common.DataContext/: ChinookContext.cs  ChinookContextExtensions.cs  ChinookDbContext.cs  ChinookDbContextExtensions.cs  DataRefreshedInterceptor.cs  RockShop.Common.DataContext.csproj
RockShop.Common.Models/: Album.cs  Artist.cs  Customer.cs  Employee.cs  Genre.cs  IDataRefreshed.cs  Invoice.cs  InvoiceLine.cs  MediaType.cs  Playlist.cs  PlaylistTrack.cs  PostgresContext.cs  RockShop.Common.Models.csproj  Track.cs
RockShop.Common.Models.Tests/: ChinookEntityModelsTests.cs  RockShop.Common.Models.Tests.csproj
RockShop.GraphQL/: Mutation.cs  Program.cs  Query.cs  RockShop.GraphQL.csproj
RockShop.GraphQL.Client.Console/: .graphqlrc.json  Program.cs  RockShop.GraphQL.Client.Console.csproj  getTracks.graphql  schema.graphql
RockShop.GraphQL.Client.Mvc/: Program.cs  RockShop.GraphQL.Client.Mvc.csproj
RockShop.Grpc.Client.Mvc/: Program.cs  RockShop.Grpc.Client.Mvc.csproj
app_radar/: Cargo.toml
app_radar/src/: main.rs
(+96 files in other folders)
